--- a/rollout_baseline_2.ipynb
+++ b/rollout_baseline_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3cfcdc80-cf78-4da6-a7a2-43da275bd61f",
    "metadata": {
     "tags": []
@@ -101,7 +101,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# --------─ 1. ViT building blocks (unchanged) -------------------------------\n",
     "class ViTBlock(nn.Module):\n",
     "    def __init__(self, embed_dim, heads, mlp_ratio=4.0, p=0.1):\n",
     "        super().__init__()\n",
@@ -177,7 +176,6 @@
     "    def forward(self, x):\n",
     "        return self.head(self.forward_features(x))\n",
     "\n",
-    "# --------─ 2. CIFAR‑100 loaders --------------------------------------------\n",
     "def get_loaders(batch=128):\n",
     "    mean, std = (0.5071, 0.4865, 0.4409), (0.2673, 0.2564, 0.2762)\n",
     "    train_tf = T.Compose([T.RandomCrop(32, 4), T.RandomHorizontalFlip(),\n",
@@ -190,7 +188,6 @@
     "            DataLoader(test_ds,  batch_size=batch, shuffle=False, num_workers=4),\n",
     "            test_ds)\n",
     "\n",
-    "# --------─ 3. Train with warm‑up + cosine decay + AMP -----------------------\n",
     "def train(model, loader, epochs, device, lr_max=5e-4, lr_min=5e-6, warm=5, wd=1e-4):\n",
     "    opt = torch.optim.AdamW(model.parameters(), lr=lr_max, weight_decay=wd)\n",
     "    def lr_lambda(ep):\n",
@@ -217,7 +214,6 @@
     "        if (ep + 1) % 20 == 0 or ep < 10:\n",
     "            print(f\"Ep {ep+1:03}/{epochs}  loss={tot/len(loader):.4f}  lr={opt.param_groups[0]['lr']:.1e}\")\n",
     "\n",
-    "# --------─ 4. Embedding & metrics helpers -----------------------------------\n",
     "def collect_feats(model, ds, classes, per_cls, device):\n",
     "    id_map = {c: ds.class_to_idx[c] for c in classes}\n",
     "    chosen, labs, per = [], [], {c: 0 for c in classes}\n",
@@ -247,7 +243,6 @@
     "    inter = cos[~torch.eye(len(cls), dtype=bool)].mean().item()\n",
     "    return intra, inter, inter / intra\n",
     "\n",
-    "# --------─ 5. Heat‑map utilities (unchanged) ---------------------------------\n",
     "def patch_heatmap(model, img_t, device, up=4):\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
@@ -264,7 +259,6 @@
     "    img = img * np.array([0.2673,0.2564,0.2762]) + np.array([0.5071,0.4865,0.4409])\n",
     "    plt.imshow(np.clip(img,0,1)); plt.imshow(heat, cmap='jet', alpha=alpha); plt.axis('off')\n",
     "\n",
-    "# --------─ 6. Main -----------------------------------------------------------\n",
     "def main():\n",
     "    parser = argparse.ArgumentParser()\n",
     "    parser.add_argument('--epochs', type=int, default=200)\n",
@@ -274,10 +268,10 @@
     "    parser.add_argument('--retrain', action='store_true')\n",
     "    parser.add_argument('--per_class', type=int, default=100)\n",
     "    parser.add_argument('--classes', nargs='*', default=None)\n",
-    "    args = parser.parse_args([])  # Jupyter‑inline; replace with parser.parse_args() in CLI\n",
+    "    args = parser.parse_args([])  \n",
     "\n",
     "    train_dl, test_dl, test_ds = get_loaders()\n",
-    "    if args.classes is None: args.classes = test_ds.classes[:10]  # default 10 classes\n",
+    "    if args.classes is None: args.classes = test_ds.classes[:10]  \n",
     "    dev = torch.device('cuda' if torch.cuda.is_available()\n",
     "             else 'mps' if torch.backends.mps.is_available() else 'cpu')\n",
     "\n",
@@ -300,7 +294,7 @@
     "    for name, model in [('baseline', baseline), ('rollout', rollout)]:\n",
     "        x, y = collect_feats(model, test_ds, args.classes, args.per_class, dev)\n",
     "        intra, inter, ratio = centroid_stats(x, y)\n",
-    "        acc = knn_acc(F.normalize(x,2,1), y)       # cosine k‑NN uses normed feats\n",
+    "        acc = knn_acc(F.normalize(x,2,1), y)       \n",
     "        sil = silhouette_score(x.numpy(), y.numpy(), metric='euclidean')\n",
     "        metrics[name] = {k: float(v) for k, v in\n",
     "                         dict(intra=intra, inter=inter, ratio=ratio,\n",
@@ -326,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "248d050f-60cd-4946-932f-3f46020be861",
    "metadata": {
     "tags": []
@@ -349,8 +343,7 @@
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "def main():\n",
-    "    # --- load CIFAR‑100 test set and models ----------------------------------\n",
-    "    train_dl, test_dl, test_ds = get_loaders()             # reuses transforms\n",
+    "    train_dl, test_dl, test_ds = get_loaders()             \n",
     "    device = torch.device('cuda' if torch.cuda.is_available()\n",
     "                          else 'mps' if torch.backends.mps.is_available() else 'cpu')\n",
     "    baseline = ViT(mode='baseline').to(device)\n",
@@ -358,13 +351,13 @@
     "    baseline.load_state_dict(torch.load('baseline.pth', map_location=device))\n",
     "    rollout.load_state_dict(torch.load('rollout.pth',  map_location=device))\n",
     "\n",
-    "    classes = test_ds.classes            # <- all 100 labels\n",
-    "    per_cls = 100                        # full test split (100 imgs each)\n",
+    "    classes = test_ds.classes            \n",
+    "    per_cls = 100                        \n",
     "\n",
     "    metrics = {}\n",
     "    for name, model in [('baseline', baseline), ('rollout', rollout)]:\n",
     "        feats, labels = collect_feats(model, test_ds, classes, per_cls, device)\n",
-    "        feats = F.normalize(feats, 2, 1)                # L2‑norm for fair distances\n",
+    "        feats = F.normalize(feats, 2, 1)                \n",
     "        intra, inter, ratio = centroid_stats(feats, labels)\n",
     "        acc = KNeighborsClassifier(5, metric='cosine').fit(feats, labels).score(feats, labels)\n",
     "        sil = silhouette_score(feats.numpy(), labels.numpy(), metric='euclidean')\n",
